# electrical-pcb

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  pyproject.toml  readme.md  ruff.toml  theory.ipynb
.claude/skills/generate-schematic/: SKILL.md
.claude/skills/layout-pcb/: SKILL.md
.claude/skills/place-pcb/: SKILL.md
.claude/skills/route-pcb/: SKILL.md
cad/: buck_converter.kicad_pcb  buck_converter.kicad_pro  buck_converter.kicad_sch  buck_converter.net  cm4_carrier.kicad_pcb  cm4_carrier.kicad_pro  cm4_carrier.kicad_sch  cm4_carrier.net  comms.py  drawing-sheet.kicad_wks  io_headers.py  kicad-spice-theme.json  layout_spec.yaml  model.py  pcb_placement.yaml  power.py  rc_charging.kicad_sch  schematic.py  ~rc_charging.kicad_sch.lck
cad/drawing/: place_pcb.py  svg_dark.py
cad/netlist/: io_headers.py  model.py
cad/schematic/: readme.md  sch_cm4.py  sch_comms.py  sch_helpers.py  sch_io.py  sch_mcu.py  sch_power.py  schematic.py
output/: cm4_carrier_pcb.step
output/fab/: bom.csv  cpl.csv
output/gerbers/: cm4_carrier-B_Adhesive.gba  cm4_carrier-B_Courtyard.gbr  cm4_carrier-B_Cu.gbl  cm4_carrier-B_Fab.gbr  cm4_carrier-B_Mask.gbs  cm4_carrier-B_Paste.gbp  cm4_carrier-B_Silkscreen.gbo  cm4_carrier-Edge_Cuts.gm1  cm4_carrier-F_Adhesive.gta  cm4_carrier-F_Courtyard.gbr  cm4_carrier-F_Cu.gtl  cm4_carrier-F_Fab.gbr  cm4_carrier-F_Mask.gts  cm4_carrier-F_Paste.gtp  cm4_carrier-F_Silkscreen.gto  cm4_carrier-User_1.gbr  cm4_carrier-User_Comments.gbr  cm4_carrier-User_Drawings.gbr  cm4_carrier-User_Eco1.gbr  cm4_carrier-User_Eco2.gbr  cm4_carrier-job.gbrjob  cm4_carrier.drl
sim/: constants.py  model.py  test_run.py
spec/drawings/: buck_converter_pcb.step
spec/drawings/gerbers/: buck_converter-B_Adhesive.gba  buck_converter-B_Cu.gbl  buck_converter-B_Fab.gbr  buck_converter-B_Mask.gbs  buck_converter-B_Paste.gbp  buck_converter-B_Silkscreen.gbo  buck_converter-Edge_Cuts.gm1  buck_converter-F_Adhesive.gta  buck_converter-F_Courtyard.gbr  buck_converter-F_Cu.gtl  buck_converter-F_Fab.gbr  buck_converter-F_Mask.gts  buck_converter-F_Paste.gtp  buck_converter-F_Silkscreen.gto  buck_converter-User_1.gbr  buck_converter-User_Comments.gbr  buck_converter-User_Drawings.gbr  buck_converter-User_Eco1.gbr  buck_converter-User_Eco2.gbr  buck_converter-job.gbrjob  buck_converter.drl
