[project]
name = "electrical-pcb"
version = "1.0.0-beta"
requires-python = "==3.13.2"
dependencies = [
    "sympy>=1.13.0",
    "pint>=0.24.0",
    "uncertainties>=3.2.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "PySpice>=1.5",
    "schemdraw>=0.19",
    "skidl>=2.0",
    "kicad-sch-api>=0.5.6",
]

[dependency-groups]
dev = [
    "black[d]>=26.3.1",
    "poethepoet>=0.32.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "pytest-cov>=6.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.16.0",
    "pip>=25.1.1",
]

# Workflow: checks → notebook → build → sim → inspect (manual PCB layout) → export → validate
# PCB layout flow: build generates netlist → inspect opens KiCad → import netlist, place, route → commit .kicad_pcb → export
[tool.poe.tasks]
format = "black ."
lint = "ruff check"
checks = ["format", "lint"]
notebook = "jupyter nbconvert --execute --inplace theory.ipynb"
build = { cmd = "python cad/model.py", env = { PYTHONPATH = "." } }
inspect-model = "bash -c 'nohup eeschema cad/buck_converter.kicad_sch &>/dev/null &'"
validate-model = "bash -c 'kicad-cli sch erc cad/buck_converter.kicad_sch && if [ -f cad/buck_converter.kicad_pcb ]; then kicad-cli pcb drc cad/buck_converter.kicad_pcb; fi'"
inspect-asm = "bash -c 'nohup kicad cad/buck_converter.kicad_pro &>/dev/null &'"
drawings = "bash -c 'mkdir -p spec/drawings/gerbers && kicad-cli sch export svg cad/buck_converter.kicad_sch -b -e -n -o spec/drawings/ && kicad-cli sch export pdf cad/buck_converter.kicad_sch -b --drawing-sheet cad/drawing-sheet.kicad_wks -o spec/drawings/buck_converter.pdf && if [ -f cad/buck_converter.kicad_pcb ]; then kicad-cli pcb export gerbers cad/buck_converter.kicad_pcb -o spec/drawings/gerbers/ && kicad-cli pcb export drill cad/buck_converter.kicad_pcb -o spec/drawings/gerbers/ && kicad-cli pcb export step cad/buck_converter.kicad_pcb -o spec/drawings/buck_converter_pcb.step && kicad-cli pcb export svg cad/buck_converter.kicad_pcb -l F.Cu,B.Cu,Edge.Cuts,F.Silkscreen --black-and-white --exclude-drawing-sheet --page-size-mode 2 --mode-single -o spec/drawings/buck_converter_pcb.svg; fi'"
sim = "pytest -vv sim/"
cover = "pytest -vv --cov sim/"
review = "claude 'run code-reviewer agent against diff for quality and elegance'"
commit = "bash -c 'uv run poe checks && uv run poe cover && uv run poe review && git add -A && git cz && git push'"

[tool.coverage.run]
omit = ["*/test_*.py"]
